notejam/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notejam-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: notejam-app
  template:
    metadata:
      labels:
        app: notejam-app
    spec:
      containers:
      - name: notejam-app
        image: dexteromen/notejam-app:latest 
        ports:
        - containerPort: 4000
        
        # these are the environment variables
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        volumeMounts:
        - mountPath: /app/uploads
          name: appdata-volume
      volumes:
      - name: appdata-volume
        emptyDir: {}
