notejam/k8s/db-stateful.yaml
# Deploys a single PostgreSQL instance 
# with stable network identity and persistent storage, 
# suitable for stateful applications like databases.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notejam-db
spec:
  # Links to the notejam-db Service for stable DNS naming
  serviceName: "notejam-db" 
  # Runs one database pod.
  replicas: 1 
  # Matches pods with the label
  selector: 
    matchLabels:
      app: notejam-db
  # Defines the pod template
  template: 
    metadata:
      labels:
        app: notejam-db
    spec:
      containers:
      - name: notejam-db
        image: dexteromen/notejam-db:latest
        ports:
        - containerPort: 5432
        volumeMounts: 
        - mountPath: /var/lib/postgresql/data
          name: postgres-pvc
      # Defines the volume to be used by the database pod
      volumes: 
      - name: postgres-pvc 
        # References the PVC for persistent storage
        persistentVolumeClaim: 
          claimName: postgres-pvc
