notejam/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notejam-app
spec:
  selector:
    app: notejam-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
      nodePort: 30727 
  type: NodePort

#Exposes the notejam-app pods internally 
#and externally (via NodePort) so they can receive traffic.
